--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
         </div>
         <div class="items">
           <ul>
-            <li class="nav-li" id="lii"><a href="#home">Acceuil</a></li>
-            <li class="nav-li" id="lii">
+            <li class="nav-li"><a href="#home">Acceuil</a></li>
+            <li class="nav-li">
               <a href="#fonctionnement">Comment ça marche?</a>
             </li>
-            <li class="nav-li" id="lii">
+            <li class="nav-li">
               <a href="#maladies">Maladies du coeur </a>
             </li>
-            <li class="nav-li" id="lii">
+            <li class="nav-li">
               <a href="#prevention">Prevention</a>
             </li>
           </ul>
