--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           ont une grande incidence sur votre santé.
         </p>
         <button class="button">
-          <span> Learn more </span>
+          <span><a href="#maladies">Learn more</a></span>
           <div class="button__horizontal"></div>
           <div class="button__vertical"></div>
         </button>
